--- a/002-link-consumer/pom.xml
+++ b/002-link-consumer/pom.xml
@@ -5,10 +5,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>001-link-userservice-provider</artifactId>
+  <artifactId>002-link-consumer</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <!--<packaging>war</packaging>-->
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <dependencies>
     <!--spring-->
@@ -28,19 +27,16 @@
       <artifactId>dubbo</artifactId>
       <version>2.6.2</version>
     </dependency>
-  </dependencies>
 
-  <build>
-    <plugins>
-      <!--JDK1.8插件-->
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+    <!--消费者新增的依赖
+    依赖服务提供者
+    -->
+    <dependency>
+      <groupId>org.example</groupId>
+      <artifactId>001-link-userservice-provider</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+
+  </dependencies>
 </project>
